// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 2`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 200ms; transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">和平区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 3`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 200ms; transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 200ms; transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">和平区</li>
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`reset method 1`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 44px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">蓟县</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`reset method 2`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="transition: 0ms; transform: translate3d(0, 88px, 0); line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li class="van-ellipsis van-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;
